<resources>
    <string name="app_name" translatable="false">Hopet</string>

    <string name="app_des">Application for help homeless pet.</string>
    <string name="share_inv">Download Hopet application to use comment function.</string>

    <string name="create_post">Create a post</string>
    <string name="news_feed">News Feed</string>

    <string name="post_created">Post Created</string>
    <string name="post_created_error">Post Create Error</string>
    <string name="edit_success">Edit Success</string>
    <string name="search_here">Search Here</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="choose_lib">Choose from Library</string>
    <string name="login_success">Login Success</string>
    <string name="logout_success">Logout Success</string>
    <string name="login_fail">Login Failed</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="confirm_update">Confirm Update</string>
    <string name="confirm_delete_des">If you delete your topic will gone always.</string>
    <string name="confirm_update_des">Your data will avaliable for 3 month.</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="show_stat">Show Stat</string>
    <string name="all_topic">All Topic : </string>
    <string name="topic_ava">Topic Avaliable : </string>
    <string name="topic_not_ava">Topic Not Avaliable : </string>
    <string name="most_animal_type">Most Animal Type : </string>
    <string name="most_breed">Most Breed : </string>
    <string name="most_gender">Most Gender : </string>
    <string name="most_age">Most Age : </string>
    <string name="most_topic_type">Most Topic Type : </string>

    <string name="name">Name</string>
    <string name="time">Time</string>
    <string name="stat">Stat</string>
    <string name="topic">Topic</string>
    <string name="update">Update</string>
    <string name="topic_data">Topic Data</string>
    <string name="user">User</string>
    <string name="email">E-mail</string>
    <string name="breed">Breed</string>
    <string name="breed_data">Breed Data</string>
    <string name="share">Share</string>
    <string name="gender">Gender</string>
    <string name="gender_data">Gender Data</string>
    <string name="age">Age</string>
    <string name="age_data">Age data</string>
    <string name="color">Color</string>
    <string name="description">Description</string>
    <string name="description_data">Description Data</string>
    <string name="save">Save</string>
    <string name="map_text">Map</string>
    <string name="account">Account</string>
    <string name="location">Location</string>
    <string name="done">Done</string>
    <string name="post">Post</string>
    <string name="photo">Photo</string>
    <string name="photos">Photos</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="take">Take</string>
    <string name="give">Give</string>
    <string name="add_location">Add Location</string>
    <string name="add_plus">+</string>
    <string name="animal_type">Animal Type</string>
    <string name="animal_type_data">Animal Type Data</string>
    <string name="navigator">Navigator</string>
    <string name="comment">Comment</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="sent">Sent</string>
    <string name="filter_search_topic">Filter Search Topic</string>
    <string name="filter_search_data">Filter Search</string>
    <string name="breed_search">Breed Search</string>

    <string name="newsfeed">News Feed</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="your_topic">Your Topic</string>

    <string name="facebook_app_id">502303846841532</string>
    <string name="fb_login_protocol_scheme">fb502303846841532</string>


    <string-array name="function_list">
        <item>None</item>
        <item>TopicType</item>
        <item>PetType</item>
        <item>Gender</item>
        <item>Age</item>
    </string-array>

    <string-array name="gender_list">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="breed_dog_list">
        <item>Labrador</item>
        <item>Golden</item>
        <item>German Shepherd</item>
        <item>Bulldogs</item>
        <item>Beagles</item>
        <item>Poodles</item>
        <item>Pug</item>
        <item>Shih Tzu</item>
        <item>Corgis</item>
        <item>Siberian Huskies</item>
        <item>Other</item>
    </string-array>

    <string-array name="search_breed_dog_list">
        <item>None</item>
        <item>Labrador</item>
        <item>Golden</item>
        <item>German Shepherd</item>
        <item>Bulldogs</item>
        <item>Beagles</item>
        <item>Poodles</item>
        <item>Pug</item>
        <item>Shih Tzu</item>
        <item>Corgis</item>
        <item>Siberian Huskies</item>
        <item>Other</item>
    </string-array>

    <string-array name="breed_cat_list">
        <item>Siamese</item>
        <item>Persian</item>
        <item>Maine Coon</item>
        <item>Ragdoll</item>
        <item>Bengal</item>
        <item>Abyssinian</item>
        <item>Birman</item>
        <item>Oriental Shorthair</item>
        <item>Sphynx</item>
        <item>Himalayan</item>
        <item>Other</item>
    </string-array>

    <string-array name="search_breed_cat_list">
        <item>None</item>
        <item>Siamese</item>
        <item>Persian</item>
        <item>Maine Coon</item>
        <item>Ragdoll</item>
        <item>Bengal</item>
        <item>Abyssinian</item>
        <item>Birman</item>
        <item>Oriental Shorthair</item>
        <item>Sphynx</item>
        <item>Himalayan</item>
        <item>Other</item>
    </string-array>

    <string-array name="breed_bird_list">
        <item>Budgies</item>
        <item>Cockatiels</item>
        <item>Finches and Canaries</item>
        <item>Parrot</item>
        <item>Lovebirds</item>
        <item>African Greys</item>
        <item>Other</item>
    </string-array>

    <string-array name="search_breed_bird_list">
        <item>None</item>
        <item>Budgies</item>
        <item>Cockatiels</item>
        <item>Finches and Canaries</item>
        <item>Parrot</item>
        <item>Lovebirds</item>
        <item>African Greys</item>
        <item>Other</item>
    </string-array>

    <string-array name="breed_rat_list">
        <item>Self</item>
        <item>Berkshire</item>
        <item>Blazed</item>
        <item>Capped</item>
        <item>Hooded</item>
        <item>Irish</item>
        <item>Masked</item>
        <item>Husky</item>
        <item>Other</item>
    </string-array>

    <string-array name="search_breed_rat_list">
        <item>None</item>
        <item>Self</item>
        <item>Berkshire</item>
        <item>Blazed</item>
        <item>Capped</item>
        <item>Hooded</item>
        <item>Irish</item>
        <item>Masked</item>
        <item>Husky</item>
        <item>Other</item>
    </string-array>

    <string-array name="age_list">
        <item>1-3 Month</item>
        <item>4-6 Month</item>
        <item>7-9 Month</item>
        <item>10-12 Month</item>
        <item>1-3 Year</item>
        <item>4-6 Year</item>
        <item>7-9 Year</item>
        <item>10-12 Year</item>
        <item>More than 12</item>
    </string-array>

    <string-array name="animal_type_list">
        <item>Dog</item>
        <item>Cat</item>
        <item>Bird</item>
        <item>Rat</item>
        <item>Other</item>
    </string-array>
    >

    <string-array name="topic_type_list">
        <item>Give</item>
        <item>Take</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment1">Hello blank fragment1</string>
    <string name="hello_blank_fragment2">Hello blank fragment2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
